chore: improved item actions configuration (#76)