@@ -1,11 +1,11 @@
 package com.github.syr0ws.craftventory.internal.config.yaml.action;
 
+import com.github.syr0ws.crafter.config.ConfigurationMap;
 import com.github.syr0ws.craftventory.api.config.exception.InventoryConfigException;
 import com.github.syr0ws.craftventory.api.inventory.action.ClickAction;
 import com.github.syr0ws.craftventory.api.inventory.action.ClickType;
 import com.github.syr0ws.craftventory.common.config.yaml.YamlCommonActionLoader;
 import com.github.syr0ws.craftventory.common.inventory.action.BroadcastAction;
-import org.bukkit.configuration.ConfigurationSection;
 
 import java.util.List;
 import java.util.Set;
@@ -15,15 +15,15 @@ public class YamlBroadcastActionLoader extends YamlCommonActionLoader {
     private static final String MESSAGES_KEY = "messages";
 
     @Override
-    public ClickAction load(ConfigurationSection section) throws InventoryConfigException {
+    public ClickAction load(ConfigurationMap map) throws InventoryConfigException {
 
-        Set<ClickType> clickTypes = super.loadClickTypes(section);
+        Set<ClickType> clickTypes = super.loadClickTypes(map);
 
-        if (!section.isList(MESSAGES_KEY)) {
-            throw new InventoryConfigException(String.format("Property '%s.%s' not found or is not a list", MESSAGES_KEY, section.getCurrentPath()));
+        if (!map.isList(MESSAGES_KEY)) {
+            throw new InventoryConfigException("Property '%s' not found or is not a list for action '%s' at '%s'".formatted(MESSAGES_KEY, this.getName(), map.getCurrentPath()));
         }
 
-        List<String> messages = section.getStringList(MESSAGES_KEY);
+        List<String> messages = map.getStringList(MESSAGES_KEY);
 
         return new BroadcastAction(clickTypes, messages);
     }
